--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
+
+    .header-container {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    margin-bottom: 12px;
+}
+
+.logo {
+    width: 60px; /* Sesuaikan dengan ukuran logo yang diinginkan */
+    height: auto;
+}
+
+.header-text {
+    flex: 1;
+}
     :root{
     --bg:#f4f8fc;
     --card:#ffffff;
@@ -128,9 +144,12 @@
 </head>
 <body>
 
-<header>
-  <h1>DASHBOARD DATA PELAKU USAHA PERIKANAN</h1>
-  <p>Filter interaktif — klik filter untuk membuka daftar. Statistik, peta, chart, dan tabel menyesuaikan hasil filter.</p>
+<header class="header-container">
+  <img src="path/to/your/logo.png" alt="Logo" class="logo">
+  <div class="header-text">
+    <h1>DASHBOARD DATA PELAKU USAHA PERIKANAN</h1>
+    <p>Filter interaktif — klik filter untuk membuka daftar. Statistik, peta, chart, dan tabel menyesuaikan hasil filter.</p>
+  </div>
 </header>
 
 <div class="card">
@@ -824,4 +843,5 @@ function exportVisibleToExcel(){
 
 </body>
 </html>
+
 
