--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <body>
 
 <header class="header-container">
-  <img src="path/to/your/logo.png" alt="Logo" class="logo">
+  <img src="./logo.png" alt="Logo" class="logo">
   <div class="header-text">
     <h1>DASHBOARD DATA PELAKU USAHA PERIKANAN</h1>
     <p>Filter interaktif — klik filter untuk membuka daftar. Statistik, peta, chart, dan tabel menyesuaikan hasil filter.</p>
@@ -843,5 +843,6 @@ function exportVisibleToExcel(){
 
 </body>
 </html>
+
 
 
