--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <header class="header-container">
   <img src="./logo.png" alt="Logo" class="logo">
   <div class="header-text">
-    <h1>DASHBOARD DATA PELAKU USAHA PERIKANAN</h1>
+    <h1>DATA PELAKU USAHA PERIKANAN DPKPP KAB.MEMPAWAH</h1>
     <p>Filter interaktif — klik filter untuk membuka daftar. Statistik, peta, chart, dan tabel menyesuaikan hasil filter.</p>
   </div>
 </header>
@@ -843,6 +843,7 @@ function exportVisibleToExcel(){
 
 </body>
 </html>
+
 
 
 
