--- a/index.html
+++ b/index.html
@@ -14,19 +14,17 @@
 
 <style>
 
-    #pieCanvas {
-  width: 100% !important;
-  height: auto !important;
-  max-width: 600px !important; /* Sesuaikan dengan kebutuhan */
-  max-height: 400px !important; /* Sesuaikan dengan kebutuhan */
-  margin: auto;
+   .chart-container {
+  position: relative;
+  height: 400px;
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
 }
 
-    .header-container {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 12px;
+#pieCanvas {
+  width: 100% !important;
+  height: 100% !important;
 }
 
 .logo {
@@ -240,20 +238,14 @@
     <option value="desa">Desa</option>
   </select>
   <label for="chartType" class="ml-10">Tipe chart:</label>
-  <label for="chartType" class="ml-10">Tipe chart:</label>
   <select id="chartType">
     <option value="pie">Pie</option>
     <option value="bar">Bar</option>
   </select>
 </div>
-    <option value="pie">Pie</option>
-    <option value="bar">Bar</option>
-  </select>
+<div class="chart-container">
+  <canvas id="pieCanvas"></canvas>
 </div>
-
-
-      <canvas id="pieCanvas"></canvas>
-    </div>
 
   <div class="card stats mt-12">
       <h3>Statistik</h3>
@@ -754,107 +746,110 @@ function buildPieAndRender(rows){
 
   if(pieChart) pieChart.destroy();
 
-  const chartOptions = {
-    responsive: true,
-    indexAxis: chartType === 'bar' ? 'y' : undefined, // Membuat bar horizontal
-    plugins: {
-      legend: {
-        display: chartType === 'pie', // Sembunyikan legend untuk bar chart
-        position: 'bottom',
-        labels: {
-          usePointStyle: true,
-          padding: 15
-        }
-      },
-      tooltip: {
-        backgroundColor: 'rgba(255, 255, 255, 0.9)',
-        titleColor: '#333',
-        titleFont: {
-          size: 13,
-          weight: 'bold'
-        },
-        bodyColor: '#666',
-        bodyFont: {
-          size: 12
-        },
-        borderColor: '#ddd',
-        borderWidth: 1,
-        padding: 12,
-        cornerRadius: 8,
-        callbacks: {
-          label(ctx){
-            const total = ctx.dataset.data.reduce((a,b)=>a+b,0);
-            const val = ctx.parsed;
-            const actualVal = chartType === 'bar' ? ctx.parsed.x : ctx.parsed;
-            const pct = total ? ((actualVal/total)*100).toFixed(1) : 0;
-            return `${ctx.label}: ${actualVal.toLocaleString('id-ID')} (${pct}%)`;
-          }
-        }
-      }
-    }
-  };
-
-  // Konfigurasi khusus untuk tipe bar
   if (chartType === 'bar') {
-    chartOptions.scales = {
-      x: {
-        beginAtZero: true,
-        grid: {
-          display: true,
-          color: 'rgba(0, 0, 0, 0.05)',
-          drawBorder: false
-        },
-        ticks: {
-          font: {
-            size: 11,
-            weight: 'bold'
-          },
-          color: '#000'
-        }
-      },
-      y: {
-        grid: {
-          display: false
-        },
-        ticks: {
-          font: {
-            size: 12,
-            weight: 'bold'
-          },
-          color: '#000'
-        }
-      }
-    };
-
     pieChart = new Chart(pieCtx, {
-      type: chartType,
+      type: 'bar',
       data: {
-        labels,
+        labels: labels,
         datasets: [{
           data: values,
-          backgroundColor: '#1e67c8', // Warna biru terang yang konsisten
+          backgroundColor: '#1e67c8',
           borderWidth: 0,
-          borderRadius: 4,
-          barPercentage: 0.6, // Membuat bar lebih tipis
-          categoryPercentage: 0.8,
-          minBarLength: 10
+          borderRadius: 4
         }]
       },
-      options: chartOptions
+      options: {
+        indexAxis: 'y',
+        responsive: true,
+        maintainAspectRatio: false,
+        plugins: {
+          legend: {
+            display: false
+          },
+          tooltip: {
+            backgroundColor: 'rgba(255, 255, 255, 0.9)',
+            titleColor: '#333',
+            bodyColor: '#666',
+            borderColor: '#ddd',
+            borderWidth: 1,
+            callbacks: {
+              label: function(context) {
+                const value = context.raw;
+                const total = context.dataset.data.reduce((a, b) => a + b, 0);
+                const percentage = ((value / total) * 100).toFixed(1);
+                return `${value.toLocaleString('id-ID')} (${percentage}%)`;
+              }
+            }
+          }
+        },
+        scales: {
+          y: {
+            beginAtZero: true,
+            grid: {
+              display: false
+            },
+            ticks: {
+              font: {
+                size: 12,
+                weight: 'bold'
+              },
+              color: '#000'
+            }
+          },
+          x: {
+            beginAtZero: true,
+            grid: {
+              color: 'rgba(0, 0, 0, 0.05)'
+            },
+            ticks: {
+              font: {
+                size: 11,
+                weight: 'bold'
+              },
+              color: '#000'
+            }
+          }
+        },
+        barThickness: 20,
+        maxBarThickness: 30,
+        barPercentage: 0.8,
+        categoryPercentage: 0.9
+      }
     });
   } else {
-    // Konfigurasi untuk pie chart tetap sama seperti sebelumnya
+    // Konfigurasi untuk pie chart tetap sama
     pieChart = new Chart(pieCtx, {
       type: 'pie',
       data: {
-        labels,
+        labels: labels,
         datasets: [{
           data: values,
           backgroundColor: generateColors(labels.length),
           borderWidth: 1
         }]
       },
-      options: chartOptions
+      options: {
+        responsive: true,
+        plugins: {
+          legend: {
+            position: 'bottom',
+            labels: {
+              usePointStyle: true,
+              padding: 15
+            }
+          },
+          tooltip: {
+            callbacks: {
+              label: function(context) {
+                const value = context.raw;
+                const total = context.dataset.data.reduce((a, b) => a + b, 0);
+                const percentage = ((value / total) * 100).toFixed(1);
+                return `${context.label}: ${value.toLocaleString('id-ID')} (${percentage}%)`;
+              }
+            }
+          }
+        }
+      }
     });
   }
 }
@@ -977,6 +972,7 @@ function exportVisibleToExcel(){
 
 </body>
 </html>
+
 
 
 
