--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Dashboard Data Pelaku Usaha Perikanan — Clean Blue</title>
+<title>Data Pelaku Usaha Perikanan</title>
 
 <!-- Leaflet CSS/JS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
@@ -850,6 +850,7 @@ function exportVisibleToExcel(){
 
 </body>
 </html>
+
 
 
 
